exports[`mcdoc parser > primitiveArrayType > Parse '' 1`] = `
{
  "node": "FAILURE",
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 0
      },
      "message": "Expected “long” but got “”",
      "severity": 3
    },
    {
      "range": {
        "start": 0,
        "end": 0
      },
      "message": "Expected “[]” but got “”",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc parser > primitiveArrayType > Parse 'byte @ 0..1 [] @ 0..' 1`] = `
{
  "node": "FAILURE",
  "errors": [
    {
      "range": {
        "start": 5,
        "end": 5
      },
      "message": "Expected “[]” but got “”",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc parser > primitiveArrayType > Parse 'byte' 1`] = `
{
  "node": "FAILURE",
  "errors": [
    {
      "range": {
        "start": 4,
        "end": 4
      },
      "message": "Expected “[]” but got “”",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc parser > primitiveArrayType > Parse 'byte@0..1[]' 1`] = `
{
  "node": {
    "type": "mcdoc:type/primitive_array",
    "children": [
      {
        "type": "mcdoc:literal",
        "range": {
          "start": 0,
          "end": 4
        },
        "value": "byte"
      },
      {
        "type": "mcdoc:int_range",
        "children": [
          {
            "type": "integer",
            "range": {
              "start": 5,
              "end": 6
            },
            "value": 0
          },
          {
            "type": "mcdoc:literal",
            "range": {
              "start": 6,
              "end": 8
            },
            "value": ".."
          },
          {
            "type": "integer",
            "range": {
              "start": 8,
              "end": 9
            },
            "value": 1
          }
        ],
        "range": {
          "start": 5,
          "end": 9
        }
      },
      {
        "type": "mcdoc:literal",
        "range": {
          "start": 9,
          "end": 11
        },
        "value": "[]",
        "colorTokenType": "type"
      }
    ],
    "range": {
      "start": 0,
      "end": 11
    }
  },
  "errors": []
}
`;

exports[`mcdoc parser > primitiveArrayType > Parse 'byte[]' 1`] = `
{
  "node": {
    "type": "mcdoc:type/primitive_array",
    "children": [
      {
        "type": "mcdoc:literal",
        "range": {
          "start": 0,
          "end": 4
        },
        "value": "byte"
      },
      {
        "type": "mcdoc:literal",
        "range": {
          "start": 4,
          "end": 6
        },
        "value": "[]",
        "colorTokenType": "type"
      }
    ],
    "range": {
      "start": 0,
      "end": 6
    }
  },
  "errors": []
}
`;

exports[`mcdoc parser > primitiveArrayType > Parse 'int[] @ 4' 1`] = `
{
  "node": {
    "type": "mcdoc:type/primitive_array",
    "children": [
      {
        "type": "mcdoc:literal",
        "range": {
          "start": 0,
          "end": 3
        },
        "value": "int"
      },
      {
        "type": "mcdoc:literal",
        "range": {
          "start": 3,
          "end": 5
        },
        "value": "[]",
        "colorTokenType": "type"
      },
      {
        "type": "mcdoc:int_range",
        "children": [
          {
            "type": "integer",
            "range": {
              "start": 8,
              "end": 9
            },
            "value": 4
          }
        ],
        "range": {
          "start": 8,
          "end": 9
        }
      }
    ],
    "range": {
      "start": 0,
      "end": 9
    }
  },
  "errors": []
}
`;

exports[`mcdoc parser > primitiveArrayType > Parse 'long @ 10000000000000001.. [] @ 0..' 1`] = `
{
  "node": "FAILURE",
  "errors": [
    {
      "range": {
        "start": 5,
        "end": 5
      },
      "message": "Expected “[]” but got “”",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc parser > primitiveArrayType > Parse 'other[]' 1`] = `
{
  "node": {
    "type": "mcdoc:type/primitive_array",
    "children": [
      {
        "type": "mcdoc:literal",
        "range": {
          "start": 0,
          "end": 5
        },
        "value": "other"
      },
      {
        "type": "mcdoc:literal",
        "range": {
          "start": 5,
          "end": 7
        },
        "value": "[]",
        "colorTokenType": "type"
      }
    ],
    "range": {
      "start": 0,
      "end": 7
    }
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 5
      },
      "message": "Expected “long” but got “other”",
      "severity": 3
    }
  ]
}
`;
